--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,5 @@
 
     }
 
+    .attribution { font-size: 11px; text-align: center; color:white;}
+    .attribution a { color: hsl(228, 45%, 44%); }
